# bodhisattva-mcp

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  ruff.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
docs/: install.md  privacy.md
docs/superpowers/plans/: 2026-04-22-v0.1.0-launchable.md  2026-04-27-bodhisattva-web-demo.md  2026-05-17-journal-read-tools.md
docs/superpowers/specs/: 2026-04-22-v0.1.0-launch-design.md  2026-04-27-bodhisattva-web-demo-design.md  2026-05-17-journal-read-tools-design.md
src/bodhisattva_mcp/: __init__.py  __main__.py  config.py  gate.py  gmail_client.py  journal.py  server.py
src/bodhisattva_mcp/attune/: __init__.py  email_prompt.py  karma_filter.py  models.py  wisdom_frame.py
src/bodhisattva_mcp/tools/: __init__.py  journal_list.py  journal_read.py  send_email.py
src/bodhisattva_mcp/web/: __init__.py  app.py
src/bodhisattva_mcp/web/templates/: base.html  index.html  pause.html  settings.html
tests/: conftest.py  test_config.py  test_email_prompt.py  test_first_run_errors.py  test_gate.py  test_gmail_client.py  test_journal.py  test_journal_list_tool.py  test_journal_read_tool.py  test_send_email_tool.py  test_server.py  test_version_flag.py  test_web.py
tests/evals/: __init__.py  fixtures.jsonl  run_eval.py
