[project]
name = "bodhisattva-mcp"
version = "0.1.0"
description = "MCP server that pauses AI before it sends an email you'll regret."
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Roger Collell", email = "rogercollellsmail@gmail.com" }]
requires-python = ">=3.12"
dependencies = [
  "mcp>=1.0.0",
  "langchain-core>=0.3.0",
  "langchain-anthropic>=0.3.0",
  "langchain-openai>=0.3.0",
  "google-api-python-client>=2.0.0",
  "google-auth-oauthlib>=1.2.0",
  "google-auth-httplib2>=0.2.0",
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.34.0",
  "jinja2>=3.1.0",
  "pydantic>=2.7.0",
  "pydantic-settings>=2.0.0",
]

[project.scripts]
bodhisattva-mcp = "bodhisattva_mcp.__main__:main"

[dependency-groups]
dev = [
  "pytest>=8.0.0",
  "pytest-asyncio>=0.23.0",
  "ruff>=0.14.0",
  "httpx>=0.28.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/bodhisattva_mcp"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
